--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Mandala Pham"
   pronouns         : "she/her" # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "I am currently a senior undegrad at UT Austin pursuing a bachelors in both geophysics and history."
   location         : "Austin, Texas"
   employer         : "The University of Texas at Austin"
   uri              : # URL
